# clockin

./: LICENSE  README.md  clockin.cabal
src/: Clockin.hs  Main.hs  Test.hs
