name:                clockin
version:             0.0.0
synopsis:            Track clocking in and out of work.
description:         Track clocking in and out of work.
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2014 Chris Done
category:            Personal
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Clockin
  build-depends:     resourcet >= 0.4.9,
                     aeson >= 0.6.2.0,
                     bytestring >= 0.10.0.0,
                     conduit >= 1.0.9.0,
                     text >= 0.11.2.0,
                     time >= 1.4.0.0,
                     time-lens >= 0.3,
                     directory >= 1.2.0.0,
                     filepath >= 1.3.0.0,
                     old-locale >= 1.0.0.0,
                     base >= 4 && <5

test-suite test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: src
    build-depends: base,
                   clockin,
                   resourcet >= 0.4.9,
                   aeson >= 0.6.2.0,
                   bytestring >= 0.10.0.0,
                   conduit >= 1.0.9.0,
                   text >= 0.11.2.0,
                   time >= 1.4.0.0,
                   time-lens >= 0.3,
                   directory >= 1.2.0.0,
                   filepath >= 1.3.0.0,
                   old-locale >= 1.0.0.0,
                   base >= 4 && <5
